test_data/typeerror/pandas-21540.py
if record_prefix is not None:
        result.rename(columns=lambda x: record_prefix + x, inplace=True)